--- a/src/styles/components/select.module.css
+++ b/src/styles/components/select.module.css
@@ -66,7 +66,6 @@
 
     & .head {
       font-size: 1.4rem;
-      width: 170px;
     }
 
     & .options {
